--- a/WeeklyEmails2/weeklyEmail2.html
+++ b/WeeklyEmails2/weeklyEmail2.html
@@ -152,16 +152,7 @@
                                 <td valign="top">
                                     <table width="100%" border="0" cellpadding="0" cellspacing="0">
 
-                                        <tbody><tr>
-                                                <td style="line-height:1px;min-width:700px" height="1" bgcolor="#000000"><img src="images/spacer.gif" style="max-height:1px;min-height:1px;display:block;width:700px;min-width:700px" alt="spacer" height="1" width="700" border="0" class="CToWUd"></td>
-                                            </tr>
-                                            <tr>
-                                                <td style="font-family:Arial,sans-serif;font-size:11px;text-align:center;color:rgb(255,255,255)" height="40" valign="middle" bgcolor="#000000">If you can’t see this email? <a target="_blank" href="*|ARCHIVE|*" style="font-family:Arial,sans-serif;font-size:11px;text-align:center;color:rgb(255,255,255);text-decoration:none">View Online</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td style="line-height:1px;font-size:1px" height="3" bgcolor="#202020">&nbsp;</td>
-                                            </tr>
-
+                                        <tbody>
 
                                             <tr>
                                                 <td style="line-height:1px;font-size:1px" height="5">&nbsp;</td>
@@ -576,7 +567,7 @@
                                                                                                                                 </td>
                                                                                                                             </tr>
                                                                                                                             <tr>
-                                                                                                                                <td style="font-family:Arial,sans-serif;font-size:12px;line-height:19px;color:rgb(255,255,255);text-align:center" align="center" height="72" valign="middle" bgcolor="#000000"> This email was sent from <span><a href="#50027297_-219624580_2123617707_" style="font-family:Arial,sans-serif;font-size:12px;color:rgb(255,255,255);text-align:center;text-decoration:none">noreply@gamecloudnetwork.com</a></span>, because you have subscribed to it.<br>
+                                                                                                                                <td style="font-family:Arial,sans-serif;font-size:12px;line-height:19px;color:rgb(255,255,255);text-align:center" align="center" height="72" valign="middle" bgcolor="#000000"> This email was sent from <span><a href="#50027297_-219624580_2123617707_" style="font-family:Arial,sans-serif;font-size:12px;color:rgb(255,255,255);text-align:center;text-decoration:none">conquerthecampaign@FOXNEWS.COM</a></span>, because you have subscribed to it.<br>
                                                                                                                                         If you do not wish to receive emails, please <span><a href="https://games.gamecloudnetwork.com/newsletter/unsubscribe?email=*|EMAIL|*" style="font-family:Arial,sans-serif;font-size:12px;color:rgb(255,255,255);text-align:center;text-decoration:underline" target="_blank">unsubscribe.</a></span>
                                                                                                                                 </td>
                                                                                                                             </tr>
