--- a/WeeklyEmails1/weeklyEmail1.html
+++ b/WeeklyEmails1/weeklyEmail1.html
@@ -152,8 +152,10 @@
                                 <td valign="top">
                                     <table width="100%" border="0" cellpadding="0" cellspacing="0">
 
-                                        <tbody><tr>
-                                            
+                                        <tbody>
+                                            <tr>
+                                                <td style="line-height:1px;font-size:1px;border-collapse:collapse" height="30" bgcolor="#202020">&nbsp;</td>
+                                            </tr>
                                             <tr>
                                                 <td style="line-height:1px;font-size:1px" height="5">&nbsp;</td>
                                             </tr>
@@ -175,6 +177,7 @@
 
                                             <tr>
                                                 <td align="center" valign="top">
+                                                    <a href="http://foxnews.com/politics/elections/2016/conquer-the-campaign" style="text-decoration:none">
                                                     <table width="100%" border="0" cellpadding="0" cellspacing="0">
                                                         <tbody><tr>
                                                                 <td style="background-repeat:no-repeat" background="https://ci6.googleusercontent.com/proxy/jU4FfMZL_GqmAJkmWg554bgA8Yp9eaABlQHUAyNxu1XQG-luUpvjBSPnVKjDQiOQLa2MW0X72EJc4FUBgub0a4l5VYsm1zc1pNOIiHgz=s0-d-e1-ft#http://edmimages.net/edm/2015_December/1450719182/bg.jpg" height="471" valign="top" width="700" bgcolor="#e3e3e3">
@@ -197,13 +200,13 @@
                                                                                                                 <td style="line-height:1px;font-size:1px" height="15">&nbsp;</td>
                                                                                                             </tr>
                                                                                                             <tr>
-                                                                                                                <td style="font-family:'Source Sans Pro','Trebuchet MS',Arial,sans-serif;font-size:28px;line-height:30px;color:rgb(0,0,0);font-weight:300" align="center" valign="top">Conquer The Campaign</td>
+                                                                                                                <td style="font-family:'Source Sans Pro','Trebuchet MS',Arial,sans-serif;font-size:28px;line-height:30px;color:rgb(0,0,0);font-weight:300" align="center" valign="top">We’ve refilled your war chest.</td>
                                                                                                             </tr>
                                                                                                             <tr>
                                                                                                                 <td style="line-height:1px;font-size:1px" height="22">&nbsp;</td>
                                                                                                             </tr>
                                                                                                             <tr>
-                                                                                                                <td style="font-family:'Source Sans Pro','Trebuchet MS',Arial,sans-serif;font-size:23px;line-height:26px;color:rgb(0,0,0)" align="center" valign="top">It's time to get back <br>on the campaign trail!</td>
+                                                                                                                <td style="font-family:'Source Sans Pro','Trebuchet MS',Arial,sans-serif;font-size:23px;line-height:26px;color:rgb(0,0,0)" align="center" valign="top">Time to get back out on<br> the campaign trial.</td>
                                                                                                             </tr>
                                                                                                             <tr>
                                                                                                                 <td style="line-height:1px;font-size:1px" height="190">&nbsp;</td>
@@ -220,6 +223,7 @@
                                                                 </td>
                                                             </tr>
                                                         </tbody></table>
+                                                    </a>
                                                 </td>
                                             </tr>
 
@@ -235,24 +239,9 @@
                                                                                 <td width="70">&nbsp;</td>
                                                                                 <td>
                                                                                     <table width="100%" border="0" cellpadding="0" cellspacing="0">
-                                                                                        <tbody><tr>
+                                                                                        <tbody>
+                                                                                            <tr>
                                                                                                 <td height="26"></td>
-                                                                                            </tr>
-                                                                                            <tr>
-                                                                                                <td height="15"></td>
-                                                                                            </tr>
-                                                                                            <tr>
-                                                                                                <td style="font-family:'Trebuchet MS',Arial,sans-serif;font-size:24px;color:rgb(0,0,0);text-align:center;text-transform:uppercase" align="center" valign="middle">Campaign Now</td>
-                                                                                            </tr>
-                                                                                            <tr>
-                                                                                                <td height="18"></td>
-                                                                                            </tr>
-                                                                                            <tr>
-                                                                                                <td style="font-family:'DejaVu Sans','Trebuchet MS',Arial,sans-serif;font-size:14px;color:rgb(134,134,134);text-align:center;line-height:24px" align="center" valign="middle">You've got the cash, where will you campaign now?
-                                                                                                </td>
-                                                                                            </tr>
-                                                                                            <tr>
-                                                                                                <td height="24"></td>
                                                                                             </tr>
                                                                                             <tr>
                                                                                                 <td align="center" valign="top">
@@ -307,7 +296,7 @@
                                                                                                 <td height="15"></td>
                                                                                             </tr>
                                                                                             <tr>
-                                                                                                <td style="font-family:'Trebuchet MS',Arial,sans-serif;font-size:24px;color:rgb(0,0,0);text-align:center;text-transform:uppercase" align="center" valign="middle">Check Back Often</td>
+                                                                                                <td style="font-family:'Trebuchet MS',Arial,sans-serif;font-size:24px;color:rgb(0,0,0);text-align:center;text-transform:uppercase" align="center" valign="middle">Keep Campaigning</td>
                                                                                             </tr>
                                                                                             <tr>
                                                                                                 <td height="18"></td>
@@ -372,13 +361,13 @@
                                                                                                 <td height="15"></td>
                                                                                             </tr>
                                                                                             <tr>
-                                                                                                <td style="font-family:'Trebuchet MS',Arial,sans-serif;font-size:24px;color:rgb(0,0,0);text-align:center;text-transform:uppercase" align="center" valign="middle">Campaign Cash</td>
+                                                                                                <td style="font-family:'Trebuchet MS',Arial,sans-serif;font-size:24px;color:rgb(0,0,0);text-align:center;text-transform:uppercase" align="center" valign="middle">Start Fundraising</td>
                                                                                             </tr>
                                                                                             <tr>
                                                                                                 <td height="18"></td>
                                                                                             </tr>
                                                                                             <tr>
-                                                                                                <td style="font-family:'DejaVu Sans','Trebuchet MS',Arial,sans-serif;font-size:14px;color:rgb(134,134,134);text-align:center;line-height:24px" align="center" valign="middle">Fundraise now by testing your knowledge on the big issues.
+                                                                                                <td style="font-family:'DejaVu Sans','Trebuchet MS',Arial,sans-serif;font-size:14px;color:rgb(134,134,134);text-align:center;line-height:24px" align="center" valign="middle">Fundraise now by testing your knowledge on the big issues and learning more about the election process.
                                                                                                 </td>
                                                                                             </tr>
                                                                                             <tr>
@@ -390,13 +379,15 @@
                                                                                                         <tbody><tr>
                                                                                                                 <td valign="top">
                                                                                                                     <table style="border:1px solid rgb(212,214,219)" align="center" width="214" border="0" cellpadding="0" cellspacing="0">
-                                                                                                                        <tbody><tr>
-                                                                                                                                <td style="font-family:'Source Sans Pro','Trebuchet MS',Arial,sans-serif;font-size:16px;color:rgb(102,103,107);font-weight:bold" align="center" height="46" valign="middle"><a href="http://foxnews.com/politics/elections/2016/conquer-the-campaign" style="color:rgb(102,103,107);text-decoration:none;line-height:46px;display:block" target="_blank">Earn More Cash</a></td>
+                                                                                                                        <tbody>
+                                                                                                                            <tr>
+                                                                                                                                <td style="font-family:'Source Sans Pro','Trebuchet MS',Arial,sans-serif;font-size:16px;color:rgb(102,103,107);font-weight:bold" align="center" height="46" valign="middle"><a href="http://foxnews.com/politics/elections/2016/conquer-the-campaign" style="color:rgb(102,103,107);text-decoration:none;line-height:46px;display:block" target="_blank">Earn More Campaign Cash</a></td>
                                                                                                                             </tr>
                                                                                                                             <tr>
                                                                                                                                 <td style="line-height:1px;font-size:1px" height="4" bgcolor="#d4d6db">&nbsp;</td>
                                                                                                                             </tr>
-                                                                                                                        </tbody></table>
+                                                                                                                        </tbody>
+                                                                                                                    </table>
                                                                                                                 </td>
                                                                                                             </tr>
                                                                                                         </tbody></table>
