--- a/WeeklyEmails2/weeklyEmail2.html
+++ b/WeeklyEmails2/weeklyEmail2.html
@@ -153,7 +153,9 @@
                                     <table width="100%" border="0" cellpadding="0" cellspacing="0">
 
                                         <tbody>
-
+                                            <tr>
+                                                <td style="line-height:1px;font-size:1px;border-collapse:collapse" height="30" bgcolor="#202020">&nbsp;</td>
+                                            </tr>
                                             <tr>
                                                 <td style="line-height:1px;font-size:1px" height="5">&nbsp;</td>
                                             </tr>
@@ -175,6 +177,7 @@
 
                                             <tr>
                                                 <td align="center" valign="top">
+                                                    <a href="http://foxnews.com/politics/elections/2016/conquer-the-campaign" style="text-decoration:none">
                                                     <table width="100%" border="0" cellpadding="0" cellspacing="0">
                                                         <tbody><tr>
                                                                 <td style="background-repeat:no-repeat" background="https://ci6.googleusercontent.com/proxy/jU4FfMZL_GqmAJkmWg554bgA8Yp9eaABlQHUAyNxu1XQG-luUpvjBSPnVKjDQiOQLa2MW0X72EJc4FUBgub0a4l5VYsm1zc1pNOIiHgz=s0-d-e1-ft#http://edmimages.net/edm/2015_December/1450719182/bg.jpg" height="471" valign="top" width="700" bgcolor="#e3e3e3">
@@ -220,6 +223,7 @@
                                                                                                                             </td>
                                                                                                                             </tr>
                                                                                                                             </tbody></table>
+                                                    </a>
                                                                                                                             </td>
                                                                                                                             </tr>
 
@@ -235,24 +239,9 @@
                                                                                                                                                                 <td width="70">&nbsp;</td>
                                                                                                                                                                 <td>
                                                                                                                                                                     <table width="100%" border="0" cellpadding="0" cellspacing="0">
-                                                                                                                                                                        <tbody><tr>
+                                                                                                                                                                        <tbody>
+                                                                                                                                                                            <tr>
                                                                                                                                                                                 <td height="26"></td>
-                                                                                                                                                                            </tr>
-                                                                                                                                                                            <tr>
-                                                                                                                                                                                <td height="15"></td>
-                                                                                                                                                                            </tr>
-                                                                                                                                                                            <tr>
-                                                                                                                                                                                <td style="font-family:'Trebuchet MS',Arial,sans-serif;font-size:24px;color:rgb(0,0,0);text-align:center;text-transform:uppercase" align="center" valign="middle">Hit The Trail</td>
-                                                                                                                                                                            </tr>
-                                                                                                                                                                            <tr>
-                                                                                                                                                                                <td height="18"></td>
-                                                                                                                                                                            </tr>
-                                                                                                                                                                            <tr>
-                                                                                                                                                                                <td style="font-family:'DejaVu Sans','Trebuchet MS',Arial,sans-serif;font-size:14px;color:rgb(134,134,134);text-align:center;line-height:24px" align="center" valign="middle">Where will you campaign now?
-                                                                                                                                                                                </td>
-                                                                                                                                                                            </tr>
-                                                                                                                                                                            <tr>
-                                                                                                                                                                                <td height="24"></td>
                                                                                                                                                                             </tr>
                                                                                                                                                                             <tr>
                                                                                                                                                                                 <td align="center" valign="top">
